Fixed album card play button styling for better visibility

--- a/client/src/components/AlbumCard/AlbumCard.css
+++ b/client/src/components/AlbumCard/AlbumCard.css
@@ -54,14 +54,22 @@
 }
 
 .albumCard-playButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  color: var(--color-green);
-  font-size: 45px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  background-color: var(--color-green);
+  font-size: 35px;
   margin-top: 1rem;
   right: 22px;
   visibility: hidden;
 }
 
 .albumCard-playButton:hover {
-  font-size: 48px;
+  font-size: 38px;
+  width: 52px;
+  height: 52px;
 }
